Support API PublishThingModelAsyncInner.