@@ -5,7 +5,10 @@ import com.aliyun.tea.*;
 
 public class GetEdgeDriverVersionResponseBody extends TeaModel {
     /**
-     * <p>The return code of the operation. A value of Success indicates that the call was successful. Other values indicate that specific errors occurred. For more information, see [Error codes](~~135200~~).</p>
+     * <p>The return code of the operation. A value of Success indicates that the call was successful. Other values indicate that specific errors occurred. For more information, see <a href="https://help.aliyun.com/document_detail/135200.html">Error codes</a>.</p>
+     * 
+     * <strong>example:</strong>
+     * <p>Success</p>
      */
     @NameInMap("Code")
     public String code;
@@ -18,18 +21,27 @@ public class GetEdgeDriverVersionResponseBody extends TeaModel {
 
     /**
      * <p>The error message that is returned if the call failed.</p>
+     * 
+     * <strong>example:</strong>
+     * <p>request parameter error</p>
      */
     @NameInMap("ErrorMessage")
     public String errorMessage;
 
     /**
      * <p>The ID of the request.</p>
+     * 
+     * <strong>example:</strong>
+     * <p>6ECE664B-E670-47BA-A6AD-62B9F35E3A7B</p>
      */
     @NameInMap("RequestId")
     public String requestId;
 
     /**
      * <p>Indicates whether the call was successful. A value of true indicates that the call was successful. A value of false indicates that the call failed.</p>
+     * 
+     * <strong>example:</strong>
+     * <p>true</p>
      */
     @NameInMap("Success")
     public Boolean success;
@@ -82,25 +94,33 @@ public class GetEdgeDriverVersionResponseBody extends TeaModel {
     public static class GetEdgeDriverVersionResponseBodyData extends TeaModel {
         /**
          * <p>The Java Virtual Machine (JVM) startup parameter.</p>
+         * 
+         * <strong>example:</strong>
+         * <p>-XX:+PrintGCDetails</p>
          */
         @NameInMap("Argument")
         public String argument;
 
         /**
          * <p>The rule for verifying configurations. The value is a JSON string in the following format:</p>
-         * <br>
-         * <p>`{"deviceConfig":{"required":false},"driverConfig":{"required":false}`</p>
-         * <br>
+         * <p><code>{&quot;deviceConfig&quot;:{&quot;required&quot;:false},&quot;driverConfig&quot;:{&quot;required&quot;:false}</code></p>
          * <p>The JSON string contains the following parameters:</p>
-         * <br>
-         * <p>*   driverConfig: the rule for verifying the configuration of the driver when the driver is to be deployed in an edge instance.</p>
-         * <p>*   deviceConfig: the rule for verifying the configurations of devices that use the driver when the driver is to be deployed in an edge instance.</p>
+         * <ul>
+         * <li>driverConfig: the rule for verifying the configuration of the driver when the driver is to be deployed in an edge instance.</li>
+         * <li>deviceConfig: the rule for verifying the configurations of devices that use the driver when the driver is to be deployed in an edge instance.</li>
+         * </ul>
+         * 
+         * <strong>example:</strong>
+         * <p>{\&quot;deviceConfig\&quot;:{\&quot;required\&quot;:false},\&quot;driverConfig\&quot;:{\&quot;required\&quot;:false}}</p>
          */
         @NameInMap("ConfigCheckRule")
         public String configCheckRule;
 
         /**
          * <p>The configuration of the container where the driver runs. The value is a JSON string. For more information about parameters in the JSON string, see the following parameter description of ContainerConfig.</p>
+         * 
+         * <strong>example:</strong>
+         * <p>{\&quot;devMappings\&quot;:[],\&quot;hostNetworkMode\&quot;:0,\&quot;portMappings\&quot;:[],\&quot;privileged\&quot;:1,\&quot;volumeMappings\&quot;:[]}</p>
          */
         @NameInMap("ContainerConfig")
         public String containerConfig;
@@ -113,43 +133,60 @@ public class GetEdgeDriverVersionResponseBody extends TeaModel {
 
         /**
          * <p>The configuration of the driver. The value is a JSON string in the following format:</p>
-         * <br>
-         * <p>`{"format":"JSON","content":"{}"}`</p>
-         * <br>
+         * <p><code>{&quot;format&quot;:&quot;JSON&quot;,&quot;content&quot;:&quot;{}&quot;}</code></p>
          * <p>The JSON string contains the following parameters:</p>
-         * <br>
-         * <p>*   format: the format of the driver configuration. Valid values: KV (key-value pair), JSON (JSON string), and FILE (configuration file).</p>
-         * <p>*   content: the content of the driver configuration. If the format parameter is set to KV or JSON, the value of this parameter is the configuration content. If the format parameter is set to FILE, the value of this parameter is the URL of the configuration file stored in Object Storage Service (OSS).</p>
+         * <ul>
+         * <li>format: the format of the driver configuration. Valid values: KV (key-value pair), JSON (JSON string), and FILE (configuration file).</li>
+         * <li>content: the content of the driver configuration. If the format parameter is set to KV or JSON, the value of this parameter is the configuration content. If the format parameter is set to FILE, the value of this parameter is the URL of the configuration file stored in Object Storage Service (OSS).</li>
+         * </ul>
+         * 
+         * <strong>example:</strong>
+         * <p>[{\&quot;content\&quot;:\&quot;{\\\&quot;defaultConfig\\\&quot;:\\\&quot;this is default driver config demo\\\&quot;}\&quot;,\&quot;format\&quot;:\&quot;JSON\&quot;}]</p>
          */
         @NameInMap("DriverConfig")
         public String driverConfig;
 
         /**
          * <p>The ID of the driver.</p>
+         * 
+         * <strong>example:</strong>
+         * <p>fec565038d7544978d9aed5c1a******</p>
          */
         @NameInMap("DriverId")
         public String driverId;
 
         /**
          * <p>The version number of the driver.</p>
+         * 
+         * <strong>example:</strong>
+         * <p>1.2.0</p>
          */
         @NameInMap("DriverVersion")
         public String driverVersion;
 
         /**
          * <p>The earliest version of Link IoT Edge that is supported by the driver.</p>
+         * 
+         * <strong>example:</strong>
+         * <p>2.0.0</p>
          */
         @NameInMap("EdgeVersion")
         public String edgeVersion;
 
         /**
          * <p>The UNIX timestamp when the driver was created.</p>
+         * 
+         * <strong>example:</strong>
+         * <p>1581912859713</p>
          */
         @NameInMap("GmtCreateTimestamp")
         public Long gmtCreateTimestamp;
 
         /**
          * <p>The last UNIX timestamp when the driver was updated.</p>
+         * 
+         * <strong>example:</strong>
+         * <p>1581912859713</p>
          */
         @NameInMap("GmtModifiedTimestamp")
         public Long gmtModifiedTimestamp;
@@ -159,9 +196,13 @@ public class GetEdgeDriverVersionResponseBody extends TeaModel {
 
         /**
          * <p>The status of the driver version. Valid values:</p>
-         * <br>
-         * <p>*   0: The driver version was not published.</p>
-         * <p>*   1: The driver version was published.</p>
+         * <ul>
+         * <li>0: The driver version was not published.</li>
+         * <li>1: The driver version was published.</li>
+         * </ul>
+         * 
+         * <strong>example:</strong>
+         * <p>0</p>
          */
         @NameInMap("VersionState")
         public String versionState;
